# multi-flow

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  biome.json  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: proxy-daemon-aarch64-apple-darwin  proxy-daemon-x86_64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chromium_version_catalog.rs  device_catalog.rs  error.rs  fingerprint_catalog.rs  font_catalog.rs  lib.rs  logger.rs  main.rs  models.rs  panic-hook.test.ts  proxy-direct-launch.test.ts  rpa_scheduler.rs  runtime_compat.rs  runtime_guard.rs  state.rs  tools-menu.test.ts
src-tauri/src/commands/: ai_skill_commands.rs  app-update-commands.test.ts  app_update_commands.rs  automation-ai-config.test.ts  automation_canvas_commands.rs  automation_commands.rs  bookmark_commands.rs  chat-commands-async.test.ts  chat-skill-activation.test.ts  chat_commands.rs  chromium_version_commands.rs  fs_workspace_commands.rs  group_commands.rs  log_commands.rs  mcp-commands-payload.test.ts  mcp_commands.rs  mod.rs  plugin_commands.rs  profile-engine-locks.test.ts  profile_commands.rs  proxy_commands.rs  reload-runtime-guard.test.ts  resource_commands.rs  rpa_commands.rs  sync_commands.rs  window-commands-locks.test.ts  window_commands.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/entities/: automation_run.rs  automation_script.rs  bookmark_template.rs  bookmark_template_subscription.rs  chat_message.rs  chat_session.rs  device_preset.rs  engine_session.rs  mcp_server.rs  mod.rs  plugin_package.rs  profile.rs  profile_group.rs  profile_proxy_binding.rs  proxy.rs  rpa_flow.rs  rpa_flow_target.rs  rpa_run.rs  rpa_run_instance.rs  rpa_run_step.rs  rpa_task.rs  rpa_task_target.rs
src-tauri/src/db/migrator/: m20260307_000001_create_profiles.rs  m20260307_000002_create_proxies_and_bindings.rs  m20260307_000003_create_profile_groups.rs  m20260307_000004_create_engine_sessions.rs  m20260307_000005_add_profile_settings.rs  m20260308_000006_create_device_presets.rs  m20260309_000009_add_proxy_portrait_fields.rs  m20260309_000010_create_rpa_tables.rs  m20260310_000011_add_proxy_locale_fields.rs  m20260310_000012_add_proxy_target_site_checks.rs  m20260310_000012_rebuild_proxy_runtime_instances.rs  m20260311_000013_create_rpa_tasks.rs  m20260321_000014_drop_rpa_tables.rs  m20260322_000015_create_plugin_packages.rs  m20260322_000016_create_agent_tasks.rs  m20260323_000016_create_agent_runtime_tables.rs  m20260323_000017_drop_agent_tables.rs  m20260326_000018_create_automation_scripts.rs  m20260327_000019_automation_v2.rs  m20260327_000020_automation_canvas.rs  m20260327_000021_script_variables_schema.rs  m20260331_000022_script_profile_and_ai_config.rs  m20260331_000023_script_settings.rs  m20260401_000024_script_ai_config_id.rs  m20260401_000025_automation_run_logs.rs  m20260402_000026_clean_legacy_ai_steps.rs  m20260405_000027_create_chat_tables.rs  mod.rs  (+9 more)
src-tauri/src/engine_manager/: mod.rs
src-tauri/src/local_api_server/: async-runtime-safety.test.ts  mod.rs  proxy-runtime-probe.test.ts
src-tauri/src/services/: agent_limits.rs  ai_prompts.rs  ai_service.rs  ai_skill_service.rs  app_preference_service.rs  automation_cdp_client.rs  automation_context.rs  automation_interpolation.rs  automation_service.rs  bookmark_template_service.rs  captcha_service.rs  chat_attachment_store.rs  chat_execution_service.rs  chat_service.rs  chromium_magic_adapter_service.rs  device_preset_service.rs  display_monitor_service.rs  engine_session_service.rs  fs_workspace_service.rs  host_locale_service.rs  locale_catalog.rs  mod.rs  model_image_service.rs  plugin_package_service.rs  profile_context_service.rs  profile_group_service.rs  profile_service.rs  proxy_service.rs  resource_service.rs  rpa_artifact_service.rs  rpa_flow_service.rs  rpa_run_service.rs  rpa_runtime_service.rs  rpa_task_service.rs  skill_install_service.rs  sync_manager_service.rs  token_counter.rs
(+631 files in other folders)
