[package]
name = "multi-flow"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "multi_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
sea-orm = { version = "1", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite"] }
sea-orm-migration = { version = "1", default-features = false, features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks", "blocking"] }
maxminddb = "0.26"
chromiumoxide = "0.9.1"
chromiumoxide_cdp = "0.9.1"
futures-util = "0.3"
axum = { version = "0.8", features = ["ws"] }
chrono = "0.4"
cron = "0.15"
tokio = { version = "1", features = ["net", "time", "sync", "process"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-window-state = "2"
zip = "2"
base64 = "0.22"
rand = "0.8"
display-info = "0.5.9"
