[package]
name = "multi-flow"
version = "0.2.8"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
devtools = ["tauri/devtools"]

[package.metadata.cargo-machete]
ignored = ["tauri-build"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "multi_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
sea-orm = { version = "1", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite"] }
sea-orm-migration = { version = "1", default-features = false, features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks", "blocking", "stream"] }
maxminddb = "0.27"
futures-util = "0.3"
bytes = "1"
axum = { version = "0.8", features = ["ws"] }
chrono = "0.4"
tokio = { version = "1", features = ["net", "time", "sync", "process"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-window-state = "2"
zip = "2"
base64 = "0.22"
rand = "0.8"
display-info = "0.5.9"
sys-locale = "0.3"
sha2 = "0.10"
urlencoding = "2"
open = "5"
keyring = "3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
tauri-plugin-updater = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSEvent"] }
block2 = "0.6"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"
incremental = false

[profile.dev]
opt-level = 1
incremental = false
